--- a/app/src/main/res/layout/activity_help_page.xml
+++ b/app/src/main/res/layout/activity_help_page.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.flightontrack.HelpPageActivity">
+    tools:context="com.flightontrack.activity.HelpPageActivity">
 
     <!--<?xml version="1.0" encoding="utf-8"?>-->
     <WebView
