--- a/app/src/main/res/layout-sw350dp/activity_main.xml
+++ b/app/src/main/res/layout-sw350dp/activity_main.xml
@@ -224,7 +224,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/label_minspeed"
+                        android:text="@string/label_minspeedMPH"
                         android:gravity="start"
                         style="@style/label_label"
                         />
