--- a/app/src/main/res/layout/activity_simple_settings.xml
+++ b/app/src/main/res/layout/activity_simple_settings.xml
@@ -154,6 +154,30 @@ android:weightSum="100"
             />
     </LinearLayout>
     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:weightSum="10"
+        >
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:text="@string/label_sendtextto"
+            android:id="@+id/txtSendtextto"
+            style="@style/label_text"
+            />
+        <Spinner
+            android:id="@+id/spinnerTextTo"
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            />
+    </LinearLayout>
+    <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
