--- a/app/src/main/res/layout/activity_simple_settings.xml
+++ b/app/src/main/res/layout/activity_simple_settings.xml
@@ -285,7 +285,7 @@ android:weightSum="100"
             android:layout_width="0dp"
             android:layout_weight="3"
             android:text="@string/label_btnreset"
-            android:id="@+id/btnClear"
+            android:id="@+id/btnReset"
             android:layout_height="wrap_content"
             />
     </LinearLayout>
