--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/patternCheckBox"
+            android:onClick="onCheckboxClicked"
             android:layout_weight="1"
             android:ellipsize="middle"
             android:scaleX="2"
