--- a/app/src/main/res/layout-sw350dp/activity_main.xml
+++ b/app/src/main/res/layout-sw350dp/activity_main.xml
@@ -165,6 +165,7 @@
 
                     <android.support.v7.widget.AppCompatCheckBox
                         android:id="@+id/patternCheckBox"
+                        android:onClick="onCheckboxClicked"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="start|top"
