--- a/app/src/main/res/layout-sw350dp/activity_simple_settings.xml
+++ b/app/src/main/res/layout-sw350dp/activity_simple_settings.xml
@@ -297,6 +297,39 @@ android:weightSum="100">
             />
     </LinearLayout>
     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="10"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        >
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="2dip"
+            android:background="@android:color/holo_blue_bright" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:weightSum="10">
+
+        <TextView
+            style="@style/label_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="@string/label_cachenumber" />
+        <TextView
+            android:id="@+id/txtCached"
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="wrap_content"
+            style="@style/label_text"
+            />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -305,11 +338,11 @@ android:weightSum="100">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="7"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:text="@string/label_clear_cache"
-            android:id="@+id/txtClearCache"
+            android:text="@string/label_cache"
+            android:id="@+id/txtCache"
             style="@style/label_text"
             />
         <Button
@@ -319,8 +352,14 @@ android:weightSum="100">
             android:id="@+id/btnClearCache"
             android:layout_height="wrap_content"
             />
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:text="@string/label_btnsend"
+            android:id="@+id/btnSendCache"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
-
     <View
         android:id="@+id/TagView"
         android:tag= "Comercial"
