--- a/app/src/main/res/layout-sw350dp/activity_main.xml
+++ b/app/src/main/res/layout-sw350dp/activity_main.xml
@@ -52,8 +52,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/card_view1"
-                card_view:cardCornerRadius="8dp"
-                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="12dp"
+                card_view:cardElevation="8dp"
                 card_view:cardUseCompatPadding="true"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -218,12 +218,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginBottom="10dp"
+                    android:layout_weight="10"
                     >
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="6"
                         android:text="@string/label_minspeedMPH"
                         android:gravity="start"
                         style="@style/label_label"
@@ -233,7 +234,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_weight="4"
                         android:layout_marginLeft="0dp"
                         >
                     <Spinner
@@ -266,7 +267,7 @@
                     style="@style/label_label"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="6"
+                    android:layout_weight="7"
                     android:inputType="text"
                     android:text="@string/label_cachedpoints" />
 
@@ -275,8 +276,8 @@
                     style="@style/label_text"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:gravity="left"
-                    android:layout_weight="2" />
+                    android:gravity="start"
+                    android:layout_weight="1" />
 
 
             </LinearLayout>
